--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "cakephp-plugin",
     "require": {
         "php": ">=7.2",
-        "cakephp/cakephp": "4.x-dev as 4.0.0" 
+        "cakephp/cakephp": "^4.0.0" 
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
