--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "DbTest plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
-        "php": ">=7.2",
-        "cakephp/cakephp": "^4.0.0"
+        "php": ">=8.1",
+        "cakephp/cakephp": "5.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "cakephp/cakephp-codesniffer": "^4.0.0"
+        "phpunit/phpunit": "^9.5.16",
+        "cakephp/cakephp-codesniffer": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -35,5 +35,10 @@
         "psalm": "psalm --show-info=false",
         "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.11 vimeo/psalm:^3.0 && mv composer.backup composer.json",
         "rector-setup": "cp composer.json composer.backup && composer require --dev rector/rector:^0.4.11 && mv composer.backup composer.json",         "test-coverage": "phpunit --coverage-clover=clover.xml"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
