--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "cakephp-plugin",
     "require": {
         "php": ">=8.1",
-        "cakephp/cakephp": "5.*"
+        "cakephp/cakephp": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.16",
+        "phpunit/phpunit": "^10.0",
         "cakephp/cakephp-codesniffer": "^4.0"
     },
     "autoload": {
