updated composer, added phpstan, psalm and phpcs, fixed issues reported by phpcs, updated copyright

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-.idea
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+.idea/*
+nbproject/*
+.vscode
+.DS_Store
+.cache
+.phpunit.cache
+.project
+.settings
+.svn
+errors.err
+tags
+node_modules
+package-lock.json
+/.phpunit.result.cache
+/nbproject/
+/composer.lock
+/tools
 /vendor
-composer.lock
+/phpunit.xml
+/webroot/css/style.css.map
+/webroot/mix.js.map
+/webroot/mix-manifest.json
