--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 parameters:
-    level: 6
-    autoload_files:
-        - tests/bootstrap.php
-    ignoreErrors:
-        - '#Parameter \#1 $fp of function fwrite expects resource, resource|false given#'
+	level: 8
+	treatPhpDocTypesAsCertain: false
+	checkGenericClassInNonGenericObjectType: false
+	paths:
+		- src/
