--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,5 +2,7 @@ parameters:
 	level: 8
 	treatPhpDocTypesAsCertain: false
 	checkGenericClassInNonGenericObjectType: false
+	bootstrapFiles:
+		- tests/bootstrap.php
 	paths:
 		- src/
